--- a/hotels.html
+++ b/hotels.html
@@ -3,25 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>Sedona hotels</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" >
-    <link rel="stylesheet"  href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
-      <nav class="main-navigation">
+    <div class="wrapper-shadow">
+      <header class="main-header">
+       <nav class="main-navigation">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.png"  width="138" height="70" alt="Логотип Седоны">
+        </a>
         <ul class="site-navigation">
           <li class="site-navigation-item">
             <a href="info.html">Информация</a>
           </li>
           <li class="site-navigation-item">
             <a href="foto-video.html">Фото и видео</a>
-          </li>
-          <li>
-            <a class="main-header-logo" href="index.html">
-            <img src="img/logo.png"  alt="Логотип Седоны" width="138" height="70">
-            </a>
-          </li>
           <li class="site-navigation-item">
             <a href="maps.html">Карта штата</a>
           </li>
@@ -42,19 +40,16 @@
             <h3 class="filter-title">Инфраструктура:</h3>
             <ul class="filter-list">
               <li class="filter-item">
-                <label>
-                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pool" checked>Бассейн
-                </label>
+                <input class="visually-hidden filter-input filter-input-checkbox" id="pool" type="checkbox" name="pool" checked>
+                <label for="pool">Бассейн</label>
               </li>
               <li class="filter-item">
-                <label>
-                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="parking">Парковка
-                </label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" id="parking" type="checkbox" name="parking">
+                  <label for="parking">Парковка</label>
               </li>
               <li class="filter-item">
-                <label>
-                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="wi-fi">Wi-Fi
-                </label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" id="Wi-Fi" type="checkbox" name="Wi-Fi">
+                  <label for="Wi-Fi" >Wi-Fi</label>
               </li>
             </ul>
           </div>
@@ -63,29 +58,37 @@
             <h3 class="filter-title">Тип жилья:</h3>
             <ul class="filter-list">
               <li class="filter-item">
-                <label>
-                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" checked>Гостиница
-                </label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" id="hotel" type="checkbox" name="hotel" checked>
+                  <label for="hotel">Гостиница</label>
               </li>
               <li class="filter-item">
-                <label>
-                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" checked>Мотель
-                </label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" id="motel" type="checkbox" name="motel" checked>
+                  <label for="motel">Мотель</label>
               </li>
               <li class="filter-item">
-                <label>
-                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartments" checked>Апартаменты
-                </label>
+                  <input class="visually-hidden filter-input filter-input-checkbox" id="apartments" type="checkbox" name="apartments" checked>
+                  <label for="apartments">Апартаменты</label>
               </li>
             </ul>
           </div>
 
           <div class="value">
             <h3 class="filter-title">Стоимость в сутки (р):</h3>
-            <label for="select-value">от 0 до 3000</label>
-            <input class="visually-hidden" id="select-value" name="select-value" type="range" min="0" max="3000">
-          <button class="filter-button" type="submit" >Показать</button>
-        </div>
+            <div class="price-controls">
+              <label class="min-price" for="min-price">от</label>
+              <input id="min-price" type="text" name="min-price" value="0">
+              <label class="max-price" for="max-price">до</label>
+              <input id="max-price" type="text" name="max-price" value="3000">
+            </div>
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar"></div>
+              </div>
+              <div class="range-toggle range-toggle-min"></div>
+              <div class="range-toggle range-toggle-max"></div>
+            </div>
+            <button class="filter-button" type="submit" >Показать</button>
+          </div>
         </form>
       </section>
 
@@ -107,102 +110,101 @@
         <h2 class="visually-hidden">Список гостиниц</h2>
           <ul class="catalog-list">
             <li class="catalog-item">
-              <a href="catalog-item.html" class="catalog-item-image">
-                <img src="img/amara.jpg" alt="Amara resort & spa" width="135" height="90">
-              </a>
               <div class="information">
+                <h3 class="hotel-name">
+                  <a href="catalog-item.html">Amara resort & spa</a>
+                </h3>
+                  <p class="first">
+                    <span class="place">Гостиница</span>
+                    <span class="price">от 4000 р.</span>
+                  </p>
+                  <p>
+                    <a class="btn btn-info" href="#info">Подробнее</a>
+                    <a class="btn btn-booking" href="#book">Забронировать</a>
+                  </p>
+                </div>
+              <p class="catalog-item-image">
                 <a href="catalog-item.html">
-                  <h3 class="hotel-name">Amara resort & spa</h3>
+                  <img src="img/amara.jpg" width="135" height="90" alt="Amara resort & spa">
                 </a>
-                <p>
-                  <span class="place">Гостиница</span>
-                  <span class="price">от 4000 р.</span>
-                </p>
-                <p>
-                  <a href="#info">
-                    <span class="btn btn-info">Подробнее</span>
-                  </a>
-                  <a href="#book">
-                    <span class="btn btn-booking">Забронировать</span>
-                  </a>
-                </p>
-              </div>
-              <span class="rating">Рейтинг: 8,5</span>
+              </p>
+              <span class="rating rating-1">Рейтинг: 8,5</span>
             </li>
 
             <li class="catalog-item">
-              <a class="catalog-item-image" href="catalog-item.html">
-                <img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
-              </a>
               <div class="information">
-                <a href="catalog-item.html">
-                  <h3 class="hotel-name">Desert Quail Inn</h3>
-                </a>
+                <h3 class="hotel-name">
+                  <a href="catalog-item.html">Desert Quail Inn</a>
+                </h3>
                 <p>
                   <span class="place">Мотель</span>
                   <span class="price">от 3000 р.</span>
                 </p>
                 <p>
-                  <a href="#info">
-                    <span class="btn btn-info">Подробнее</span>
-                  </a>
-                  <a href="#book">
-                    <span class="btn btn-booking">Забронировать</span>
-                  </a>
+                  <a class="btn btn-info" href="#info">Подробнее</a>
+                  <a class="btn btn-booking" href="#book">Забронировать</a>
                 </p>
               </div>
-              <span class="rating">Рейтинг: 8,9</span>
+              <p class="catalog-item-image">
+                <a href="catalog-item.html">
+                  <img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn">
+                </a>
+              </p>
+              <span class="rating rating-2">Рейтинг: 8,9</span>
             </li>
 
             <li class="catalog-item">
-              <a class="catalog-item-image" href="catalog-item.html">
-                <img src="img/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
-              </a>
               <div class="information">
-                <a href="catalog-item.html">
-                  <h3 class="hotel-name">Villas at Poco Diablo</h3>
-                </a>
-                <p>
-                  <span class="place">Апартаменты</span>
-                  <span class="price">от 2000 р.</span>
-                </p>
-                <p>
-                  <a href="#info">
-                    <span class="btn btn-info">Подробнее</span>
+                <h3 class="hotel-name">
+                  <a href="catalog-item.html">Villas at Poco Diablo</a>
+                </h3>
+                  <p>
+                    <span class="place">Апартаменты</span>
+                    <span class="price">от 2000 р.</span>
+                  </p>
+                  <p>
+                    <a class="btn btn-info" href="#info">Подробнее</a>
+                    <a class="btn btn-booking" href="#book">Забронировать</a>
+                  </p>
+                </div>
+                <p class="catalog-item-image">
+                  <a href="catalog-item.html">
+                    <img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
                   </a>
-                  <a href="#book">
-                    <span class="btn btn-booking">Забронировать</span>
-                  </a>
                 </p>
-              </div>
               <span class="rating">Рейтинг: 9,2</span>
             </li>
           </ul>
         </section>
       </main>
       <footer class="main-footer">
-        <span class="inviting">#visitsedona</span>
+      <div class="wrapper">
+       <span class="inviting">#visitsedona</span>
 
-        <div class="social">
-          <ul class="social-list">
-            <li>
-              <a class="social-btn" href="#twitter">Твиттер</a>
-            </li>
-            <li>
-              <a class="social-btn" href="#fb">Фейсбук</a>
-            </li>
-            <li>
-              <a class="social-btn" href="#youtube">Ютуб</a>
-            </li>
-          </ul>
+       <div class="social">
+         <ul class="social-list">
+          <li>
+           <a class="social-btn" href="#twitter"><span class="visually-hidden">Твиттер</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15"><path fill="#FFF" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/></svg>
+          </a>
+        </li>
+         <li>
+           <a class="social-btn" href="#fb"><span class="visually-hidden">Фейсбук</span><svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+           </a>
+          </li>
+          <li>
+           <a class="social-btn" href="#youtube"><span class="visually-hidden">Ютуб</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16"><path fill="#FFF" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/></svg>
+          </a>
+          </li>
+         </ul>
         </div>
-
-        <div class="footer-copyright">
+         <div class="footer-copyright">
           <span class="copyright">websyte by</span>
-            <a href="https://htmlacademy.ru/intensive/htmlcss" class="main-footer-logo" >
-              <img  src="img/logo-htmlacademy.svg"  alt="Логотип HTMLAcademy" width="115" height="41" title="Ссылка на сайт HTMLAcademy">
+            <a class="link" href="https://htmlacademy.ru/intensive/htmlcss" >
+              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"  width="115" height="41" viewBox="0 0 108.08 36.85"><title>logo-htmlacademy-small1</title><path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z" transform="translate(0 -0.02)" fill="#231f20"/></svg>
             </a>
+          </div>
         </div>
       </footer>
-    </body>
-  </html>
+    </div>
+  </body>
+</html>
